--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,10 +1,10 @@
-.TH UGREP "1" "October 23, 2020" "ugrep 3.0.4" "User Commands"
+.TH UGREP "1" "November 17, 2020" "ugrep 3.0.5" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
 .B ugrep
-[\fIOPTIONS\fR] [\fB-A\fR \fINUM\fR] [\fB-B\fR \fINUM\fR] [\fB-C\fR[\fINUM\fR]] [\fIPATTERN\fR] [\fB-f\fR \fIFILE\fR]
-      [\fB-e\fR \fIPATTERN\fR] [\fB-N\fR \fIPATTERN\fR] [\fB-t\fR \fITYPES\fR] [\fB-J\fR [\fINUM\fR]] [\fB--sort\fR[=\fIKEY\fR]]
+[\fIOPTIONS\fR] [\fB-A\fR \fINUM\fR] [\fB-B\fR \fINUM\fR] [\fB-C \fR\fINUM\fR] [\fB-y\fR] [\fB-Q\fR|\fIPATTERN\fR] [\fB-f\fR \fIFILE\fR]
+      [\fB-e\fR \fIPATTERN\fR] [\fB-N\fR \fIPATTERN\fR] [\fB-t\fR \fITYPES\fR] [\fB-g\fR \fIGLOBS\fR] [\fB--sort\fR[=\fIKEY\fR]]
       [\fB--color\fR[=\fIWHEN\fR]|\fB--colour\fR[=\fIWHEN\fR]] [\fB--pager\fR[=\fICOMMAND\fR]] [\fIFILE\fR \fI...\fR]
 .SH DESCRIPTION
 The \fBugrep\fR utility searches any given input files, selecting lines that
@@ -20,6 +20,9 @@ automatically normalized; otherwise, \fBugrep\fR assumes the input is ASCII,
 UTF-8, or raw binary.  An input encoding format may be specified with option
 \fB--encoding\fR.
 .PP
+The \fBug\fR command is equivalent to \fBugrep --config\fR to load the default
+configuration file, which allows for customization, see CONFIGURATION.
+.PP
 If no \fIFILE\fR arguments are specified and standard input is read from a
 terminal, recursive searches are performed as if \fB-R\fR is specified.  To
 force reading from standard input, specify `-' as a \fIFILE\fR argument.
@@ -32,8 +35,11 @@ Hidden files and directories are ignored in recursive searches.  Option
 \fB-.\fR (\fB--hidden\fR) includes hidden files and directories in recursive
 searches.
 .PP
-The \fBug\fR command is equivalent to \fBugrep --config\fR to load the default
-configuration file, which allows for customization, see CONFIGURATION.
+A query interface is opened with \fB-Q\fR (\fB--query\fR) to interactively
+specify search patterns and view search results.  Note that a \fIPATTERN\fR
+argument should not be specified in this case.
+.PP
+For help, \fB--help \fIWHAT\fR displays help on options related to \fIWHAT\fR.
 .PP
 The following options are available:
 .TP
@@ -76,11 +82,10 @@ byte or invalid UTF.  Short options are \fB\-a\fR, \fB\-I\fR, \fB\-U\fR, \fB\-W\
 \fB\-\-break\fR
 Adds a line break between results from different files.
 .TP
-\fB\-C\fR[\fINUM\fR], \fB\-\-context[\fR=\fINUM\fR]
+\fB\-C\fR \fINUM\fR, \fB\-\-context\fR=\fINUM\fR
 Print NUM lines of leading and trailing context surrounding each
-match.  The default is 2 and is equivalent to \fB\-A\fR 2 \fB\-B\fR 2.  Places
-a \fB\-\-group\-separator\fR between contiguous groups of matches.
-No whitespace may be given between \fB\-C\fR and its argument NUM.
+match.  Places a \fB\-\-group\-separator\fR between contiguous groups of
+matches.  See also options \fB\-A\fR, \fB\-B\fR, and \fB\-y\fR.
 .TP
 \fB\-c\fR, \fB\-\-count\fR
 Only a count of selected lines is written to standard output.
@@ -1092,6 +1097,10 @@ $ tail -f /var/log/system.log | ugrep -u -i -w bug
 Display all words in a MacRoman-encoded file that has CR newlines:
 .IP
 $ ugrep --encoding=MACROMAN '\\w+' mac.txt
+.PP
+Display options related to "fuzzy" searching:
+.IP
+$ ugrep --help fuzzy
 .SH BUGS
 Report bugs at:
 .IP
